--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.0.0",
@@ -46,5 +46,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "dependencies": {
+    "csv": "^5.1.1",
+    "lodash": "^4.17.11"
+  }
 }
