--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
-    "lint:js": "./node_modules/.bin/eslint src/js/*.js",
+    "lint:js": "./node_modules/.bin/eslint src/js/**/*.js",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "lint:html": "pa11y-ci ./src/**/*.html",
     "start:dev": "webpack-dev-server --config webpack.config.dev.js",
