--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
+    "build:templates": "handlebars src/templates -f src/static/templates.handlebars --min --extension html",
     "lint:js": "./node_modules/.bin/eslint src/js/**/*.js",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "lint:html": "pa11y-ci ./src/**/*.html",
@@ -28,6 +29,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "glob": "^7.1.3",
+    "handlebars": "^4.1.0",
     "html-webpack-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.3",
