--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "file-loader": "^3.0.1",
     "glob": "^7.1.3",
     "handlebars": "^4.1.0",
     "html-webpack-plugin": "^3.0.0",
@@ -43,6 +44,7 @@
     "sass-loader": "^7.1.0",
     "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
+    "url-loader": "^1.1.2",
     "watch": "^1.0.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.1.0",
