--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
-    "build:templates:dev": "handlebars src/templates -f src/static/templates.handlebars --extension html",
-    "build:templates": "handlebars src/templates -f src/static/templates.handlebars --min --extension html",
+    "build:templates": "handlebars src/templates -f src/js/templates.handlebars --min --extension html -c handlebars/runtime",
+    "build:templates:dev": "handlebars src/templates -f src/js/templates.handlebars --extension html -c handlebars/runtime",
+    "lint:html": "pa11y-ci ./src/**/*.html",
     "lint:js": "./node_modules/.bin/eslint src/js/**/*.js",
     "lint:styles": "stylelint \"src/**/*.scss\"",
-    "lint:html": "pa11y-ci ./src/**/*.html",
-    "start:dev": "webpack-dev-server --config webpack.config.dev.js",
+    "prebuild": "yarn build:templates",
     "start": "webpack --config webpack.config.prod.js && http-server ./dist -o",
-    "watch:templates": "watch 'yarn build:templates:dev' src/templates/"
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js",
+    "watch:templates": "watch 'yarn build:templates:dev' src/templates"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -33,7 +34,6 @@
     "eslint-plugin-import": "^2.14.0",
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
-    "handlebars": "^4.1.0",
     "html-webpack-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.3",
@@ -60,6 +60,7 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "csv": "^5.1.1",
+    "handlebars": "^4.1.0",
     "lodash": "^4.17.11",
     "qs": "^6.6.0"
   }
