--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
     "build:templates": "handlebars src/templates -f src/js/configs/report.handlebars --min --extension html -c handlebars/runtime",
-    "build:templates:dev": "handlebars src/templates -f src/js/configs/report.handlebars --extension html -c handlebars/runtime",
     "lint:html": "pa11y-ci ./src/**/*.html",
     "lint:js": "./node_modules/.bin/eslint src/js/**/*.js",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "prebuild": "yarn build:templates",
     "start": "webpack --config webpack.config.prod.js && http-server ./dist -o",
     "start:dev": "webpack-dev-server --config webpack.config.dev.js",
-    "watch:templates": "watch 'yarn build:templates:dev' src/templates"
+    "watch:templates": "watch 'yarn build:templates' src/templates"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
