--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.0.0",
