--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "csv": "^5.1.1",
     "handlebars": "^4.1.0",
     "lodash": "^4.17.11",
-    "qs": "^6.6.0"
+    "qs": "^6.6.0",
+    "sha.js": "^2.4.11"
   }
 }
