--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.0.0",
+    "http-server": "^0.11.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
